feat(items, gameplay): add seeker camera item and interaction mechanics
- Introduced the `CameraItem` for seekers, allowing placement and spectating through cameras.
- Added camera interaction functionalities: placement, cycling, and night vision toggle.
- Integrated new `CameraViewListener` for managing camera interactions and events.
- Enhanced seeker gameplay with support for up to configurable max cameras per seeker session.
- Updated torch indicators and added prevention for unauthorized interactions with cameras.